# autotools-examples

./: README.md
a2ps-4.14/: Makefile.am
a2ps-4.14/.pc/02_composite_fonts.diff/encoding/: Makefile.am
a2ps-4.14/afm/: Makefile.am
a2ps-4.14/auxdir/: Makefile.am
a2ps-4.14/contrib/: Makefile.am
a2ps-4.14/contrib/emacs/: Makefile.am
a2ps-4.14/contrib/sample/: Makefile.am
a2ps-4.14/doc/: Makefile.am
a2ps-4.14/encoding/: Makefile.am
a2ps-4.14/etc/: Makefile.am
a2ps-4.14/fonts/: Makefile.am
a2ps-4.14/lib/: Makefile.am
a2ps-4.14/m4/: Makefile.am
a2ps-4.14/man/: Makefile.am
a2ps-4.14/ogonkify/: Makefile.am
a2ps-4.14/ogonkify/doc/: Makefile.am
a2ps-4.14/ogonkify/m4/: Makefile.am
a2ps-4.14/ppd/: Makefile.am
a2ps-4.14/ps/: Makefile.am
a2ps-4.14/sheets/: Makefile.am
a2ps-4.14/src/: Makefile.am
a2ps-4.14/tests/: Makefile.am
abiword-3.0.2/: Makefile.am  configure.ac
acct-6.6.4/: Makefile.am  configure.ac
acct-6.6.4/.pc/03_cross-build-support.patch/: Makefile.am  configure.ac
acct-6.6.4/lib/: Makefile.am
achilles-2/: Makefile.am
acpitool-0.5.1/: Makefile.am
afflib-3.7.18/: Makefile.am  configure.ac
afflib-3.7.18/doc/: Makefile.am
afflib-3.7.18/lib/: Makefile.am
afflib-3.7.18/lzma443/: Makefile.am
afflib-3.7.18/man/: Makefile.am
afflib-3.7.18/pyaff/: Makefile.am
afflib-3.7.18/tests/: Makefile.am
afflib-3.7.18/tools/: Makefile.am
ale-0.9.0.3/: Makefile.am
ale-0.9.0.3/lib/: Makefile.am
ample-0.5.7/: configure.ac
ams-2.1.2/: configure.ac
amsynth-1.8.0/: Makefile.am
antigrav-0.0.3/: Makefile.am
ap-utils-1.5/: Makefile.am
ap-utils-1.5/Documentation/: Makefile.am
ap-utils-1.5/ap-gl/: Makefile.am
ap-utils-1.5/lib/: Makefile.am
ap-utils-1.5/src/: Makefile.am
apparix-11-062/: Makefile.am  configure.ac
apparix-11-062/doc/: Makefile.am
apparix-11-062/src/: Makefile.am
aribb24-1.0.3/: configure.ac
arpack++-2.3/: Makefile.am  configure.ac
audacity-2.3.2/: configure.ac
aumix-2.9.1/: configure.ac
autoproject-0.20/: Makefile.am
autoproject-0.20/lib/cli/c++/none/: Makefile.am
autoproject-0.20/lib/cli/c/argp/: Makefile.am
autoproject-0.20/lib/cli/c/autogen/: Makefile.am
autoproject-0.20/lib/cli/c/clig/: Makefile.am
autoproject-0.20/lib/cli/c/none/: Makefile.am
autoproject-0.20/lib/cli/sh/none/: Makefile.am
autounit-0.20.1/: Makefile.am
awffull-3.10.2/: Makefile.am  configure.ac
awffull-3.10.2/contrib/: Makefile.am
awffull-3.10.2/doc/: Makefile.am
awffull-3.10.2/src/: Makefile.am
bbmail-0.9.3/: Makefile.am  configure.ac
bbmail-0.9.3/.pc/fix-ld-as-needed.diff/src/: Makefile.am
bbmail-0.9.3/data/: Makefile.am
bbmail-0.9.3/scripts/: Makefile.am
bbmail-0.9.3/src/: Makefile.am
bbtime-0.1.5/: Makefile.am
bbtime-0.1.5/.pc/before_quilt.patch/: Makefile.am
bbtime-0.1.5/.pc/before_quilt.patch/data/: Makefile.am
bbtime-0.1.5/.pc/readme_etc.patch/data/: Makefile.am
bbtime-0.1.5/data/: Makefile.am
bitstormlite-0.2q/: Makefile.am  configure.ac
bitstormlite-0.2q/.pc/ld_as-needed_FTFBS_fix.patch/src/: Makefile.am
bitstormlite-0.2q/src/: Makefile.am
blackbox-0.70.1/: configure.ac
bs1770gain-0.6.5/: Makefile.am  configure.ac
bs1770gain-0.6.5/lib1770-2/: Makefile.am
bs1770gain-0.6.5/libbg/: Makefile.am
bs1770gain-0.6.5/libff/: Makefile.am
bs1770gain-0.6.5/libpbutil/: Makefile.am
btscanner-2.1/: Makefile.am
btscanner-2.1/.pc/drop-installation-oui.patch/: Makefile.am
c-icap-0.5.3/: configure.ac
calf-0.90.3/: Makefile.am  configure.ac
canna-3.7p3/: configure.ac
capi4hylafax-01.03.00.99.svn.300/: Makefile.am
capi4hylafax-01.03.00.99.svn.300/src/: Makefile.am
capi4hylafax-01.03.00.99.svn.300/src/capi/: Makefile.am
capi4hylafax-01.03.00.99.svn.300/src/convert/: Makefile.am
capi4hylafax-01.03.00.99.svn.300/src/faxrecv/: Makefile.am
capi4hylafax-01.03.00.99.svn.300/src/faxsend/: Makefile.am
capi4hylafax-01.03.00.99.svn.300/src/linuxdep/: Makefile.am
capi4hylafax-01.03.00.99.svn.300/src/standard/: Makefile.am
cdrdao-1.2.4/: configure.ac
citadel-917/: configure.ac
citadel-client-916/: configure.ac
clex-4.6.patch8/: Makefile.am  configure.ac
coinutils-2.10.14+repack1/: Makefile.am  configure.ac
cowdancer-0.88/: Makefile.am  configure.ac
cpputest-3.8/: Makefile.am
cpqarrayd-2.3.6/: Makefile.am  configure.ac
cpqarrayd-2.3.6/scripts/: Makefile.am
cpu-1.4.3/: Makefile.am  configure.ac
cpufreqd-2.4.2/: Makefile.am
cpufreqd-2.4.2/manpages/: Makefile.am
cpufreqd-2.4.2/src/: Makefile.am
cpufreqd-2.4.2/utils/: Makefile.am
criticalmass-1.0.0/: Makefile.am
cutils-1.6/: configure.ac
cwiid-0.6.00+svn201/: configure.ac
dbacl-1.14.1/: Makefile.am
dbacl-1.14.1/.pc/00-fix-man-page-paths.patch/doc/: Makefile.am
dbacl-1.14.1/.pc/00-fix-man-page-paths.patch/doc/chess/: Makefile.am
dbacl-1.14.1/.pc/00-fix-man-page-paths.patch/man/: Makefile.am
dbacl-1.14.1/.pc/04-fix-ldflags.patch/src/: Makefile.am
dbacl-1.14.1/.pc/05-locale-h.patch/src/: Makefile.am
dbacl-1.14.1/TREC/: Makefile.am
dbacl-1.14.1/contrib/: Makefile.am
dbacl-1.14.1/doc/: Makefile.am
dbacl-1.14.1/doc/chess/: Makefile.am
dbacl-1.14.1/man/: Makefile.am
dbacl-1.14.1/src/: Makefile.am
dbacl-1.14.1/src/tests/: Makefile.am
dbacl-1.14.1/ts/: Makefile.am
dgedit-0.10.0/: Makefile.am  configure.ac
dgedit-0.10.0/.pc/0001-Fix-rcc-invocation.patch/src/: Makefile.am
dgedit-0.10.0/icons/: Makefile.am
dgedit-0.10.0/src/: Makefile.am
dh-exec-0.23.2/: Makefile.am  configure.ac
drumgizmo-0.9.17/: Makefile.am  configure.ac
drumgizmo-0.9.17/.pc/0001-alsa-kFreeBSD.patch/: configure.ac
drumgizmo-0.9.17/.pc/0002-disable-lv2-test.patch/test/: Makefile.am
drumgizmo-0.9.17/drumgizmo/: Makefile.am
drumgizmo-0.9.17/man/: Makefile.am
drumgizmo-0.9.17/plugin/: Makefile.am
drumgizmo-0.9.17/plugin/vst/: Makefile.am
drumgizmo-0.9.17/plugingui/: Makefile.am
drumgizmo-0.9.17/src/: Makefile.am
drumgizmo-0.9.17/test/: Makefile.am
drumgizmo-0.9.17/test/dgreftest/: Makefile.am
drumgizmo-0.9.17/test/uitests/: Makefile.am
drumgizmo-0.9.17/tools/: Makefile.am
(+1373 files in other folders)
