# Copyright 2006 David Hilvert <dhilvert@auricle.dyndns.org>,
#                              <dhilvert@ugcs.caltech.edu>

#  This file is part of the Anti-Lamenessing Engine.
#
#  The Anti-Lamenessing Engine is free software; you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation; either version 3 of the License, or
#  (at your option) any later version.
#
#  The Anti-Lamenessing Engine is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with Anti-Lamenessing Engine; if not, write to the Free Software
#  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA


# 
# Makefile.am: This file is used by automake to generate Makefile.in.
#

#
# Include files from the 'm4' directory.
#

ACLOCAL_AMFLAGS = -I m4

#
# Local targets.
#

clean-local: dejagnu-clean

#
# DejaGNU configuration
#

AUTOMAKE_OPTIONS=dejagnu
RUNTESTFLAGS=--tool ale ALE=./ale --srcdir=./testsuite

dejagnu-clean:
	rm -f ale.sum ale.log
	find testsuite -name "*temp.*" -print0 | xargs -0 rm -rf
	find testsuite -name "*.output.*" -print0 | xargs -0 rm -rf

#
# Gnulib support functions (generating lib/libgnu.la).
# 

SUBDIRS = lib

#
# Flags
# 
# NOTE: OPTION_CFLAGS may include flags (e.g., generated by acx_pthread.m4)
# that are required for both compile and link operations; hence, it has been
# added to both AM_CPPFLAGS and AM_LDFLAGS.
#

AM_CPPFLAGS = @OPTION_CFLAGS@ @OPTION_CPPFLAGS@ -I$(top_srcdir)/lib
AM_LDFLAGS = @OPTION_CFLAGS@ @OPTION_LDFLAGS@

#
# Executable target.
#

bin_SCRIPTS = ale
bin_PROGRAMS = ale-bin
ale_bin_SOURCES = ale.cc thread.cc rand.cc ui/ui.cc ui/input.cc ui/ui_log.cc d2.cc d3.cc
ale_bin_LDADD = lib/libgnu.la @OPTION_LIBS@

#
# Manuals
#

man_MANS = doc/man/ale.1
