## Process this file with automake to produce Makefile.in
## $Id: Makefile.am,v 1.1 2005/10/09 22:32:36 flux Exp $

## stuff in shtest should get distributed but not installed
SUBDIRS = . util src doc

#VERSION: ChangeLog NEWS
#	./setversion

VERSION = @VERSION@

EXTRA_DIST = \
   LICENSE VERSION README COPYING THANKS INSTALL AUTHORS \
   bootstrap \
   configure.ac \
   setversion

