## Makefile.am -- Process this file with automake to produce Makefile.in
SUBDIRS         = src doc po flags contrib
EXTRA_DIST      = m4/ChangeLog  bootstrap sample.conf sample.minimal.conf README.FIRST country-codes.txt TODO README.webalizer PERFORMANCE_TIPS.txt DNS.README sample.css
ACLOCAL_AMFLAGS = -I m4

